# Module_8.2

./: consumer.py  consumer_email.py  consumer_sms.py  json_upload.py  main.py  main_.py  models.py  producer.py  producer_.py  pyproject.toml  search.py
